--- a/extension/static/popup.html
+++ b/extension/static/popup.html
@@ -12,7 +12,7 @@
     <div class="grid-container">
       <div class="grid-x grid-margin-x">
         <div class="cell small-10 small-offset-2">
-          <h1>Multi-Word Highlighter</h1>
+          <h1>Multi-Words Highlighter</h1>
         </div>
         <div class="cell small-12">
           <h2>Word List</h2>
@@ -26,7 +26,7 @@
       <ul class="checkbox-list">
       <li>
         <input id="checkboxShowOccurrences" type="checkbox" />
-        <label for="checkboxShowOccurrences">Show number of found keywords in toolbar icon.</label>
+        <label for="checkboxShowOccurrences">Show number of found words in toolbar icon.</label>
       </li>
       <li>
         <input id="checkboxSubtleHighlighting" type="checkbox" />
