--- a/extension/static/popup.html
+++ b/extension/static/popup.html
@@ -51,16 +51,19 @@
             <label title="Extension will refresh the search on tab focus" for="checkboxSearchOnTabfocus">Refresh search on tab focus.</label>
           </li>
           
-          <li>
+          <li id="enableSearchRow">
             <input type="checkbox" id="checkboxEnableSearch">
             <label for="checkboxEnableSearch">Enable search</label>
           </li>
         </ul>
       </div>
-      <div class="cell small-12">
-        <button id="buttonSave" class="button small" type="submit">Save/Refresh</button>
-        <button id="buttonCancel" class="button secondary small" type="reset">Cancel</button>
-
+      <div class="cell small-12 button-container">
+        <div class="left-buttons">
+        <button id="buttonSave" class="button small" title="Save options and close window." type="button">Save & Close</button>
+        <button id="buttonSearch" class="button  small" type="button">Search</button>
+        <button id="buttonClear" class="button  small" type="button">Clear</button>
+        </div>
+        <button id="buttonCancel" class="button button-right secondary small" title="Close without saving." type="button">Cancel</button>
       </div>
     </div>
   </div>
