--- a/extension/static/popup.html
+++ b/extension/static/popup.html
@@ -20,14 +20,19 @@
         <h2>Word List</h2>
         <p>Which word(s) should be highlighted? (line seperated word list)</p>
       </div>
-      <div class="cell small-12">
+      <div class="">
         <div id="container">
           <div id='lineCounter'>
             <div class="before"></div>
             <div class="line">1.</div>
           </div>
-          <div id="textareaKeywordsdiv"><textarea id="textareaKeywords" rows="2" wrap='off'
-              placeholder="Keyword list (line-separated)"></textarea> </div>
+          <div id="textareaKeywordsdiv">
+            <textarea id="textareaKeywords" rows="2" wrap='off' placeholder="Keyword list (line-separated)"></textarea>
+          </div>
+          <div id='wordCounter'>
+            <div class="before"></div>
+            <div class="line">0</div>
+          </div>
         </div>
 
       </div>
