fixed word count display when more than 10 entries where defined.

--- a/extension/static/popup.html
+++ b/extension/static/popup.html
@@ -31,7 +31,7 @@
           </div>
           <div id='wordCounter'>
             <div class="before"></div>
-            <div class="line">0</div>
+            <div class="countLine">0</div>
           </div>
         </div>
 
